--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "8.6.1",
+    "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-bootstrap-carousel": "^4.1.1",
     "react-dom": "^18.3.1",
